# td-shim

./: Makefile  README.md  zcore.elf
.github/workflows/: devtools.yml  format.yml  fuzz.yml  integration-tdx.yml  integration.yml  library.yml  main.yml  release.yaml  weekly-cargo-update.yml
devtools/: Makefile
devtools/dev_container/: Dockerfile
devtools/td-layout-config/: config_exec.json  config_image.json  config_linux.json
devtools/td-layout-config/src/: config.rs  image.rs  lib.rs  main.rs  memory.rs  render.rs
devtools/td-layout-config/src/template/: image.rs.jinja  memory.rs.jinja
doc/: secure_boot_guide.md
mbedtls/: Cargo.toml
mbedtls/src/: lib.rs
sh_script/: build_final.sh
td-layout/: Cargo.toml
td-layout/src/: image.rs  lib.rs  memslice.rs
td-layout/src/runtime/: exec.rs  linux.rs
td-payload/src/arch/x86_64/: dma.rs  shared.rs
td-shim/: Cargo.toml  build.rs
td-shim-tools/: Cargo.toml
td-shim-tools/src/: enroller.rs  lib.rs  linker.rs  metadata.rs  tee_info_hash.rs
td-shim/src/: e820.rs  reset_vector.rs
tdx-tdcall/src/: lib.rs  tdreport.rs  tdx.rs
tests/test-td-paging/src/: lib.rs
xtask/src/: build.rs
