[package]
name = "td-layout"
version = "0.1.0"
description = "Define build time and runtime layout for trusted domain"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[features]
default = []
linux-payload = []

[dependencies]
cfg-if = "1.0"
log = "0.4.13"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
td-uefi-pi =  { path = "../td-uefi-pi" }

[dev-dependencies]
memoffset = "0.6"